updates for Java 7 support